@@ -40,6 +40,7 @@ import gtk.CellRendererText as PyGtkCellRendererText_Type
 import gtk.Container as PyGtkContainer_Type
 import gtk.Dialog as PyGtkDialog_Type
 import gtk.Label as PyGtkLabel_Type
+import gtk.IconTheme as PyGtkIconTheme_Type
 import gtk.TreeModel as PyGtkTreeModel_Type
 import gtk.UIManager as PyGtkUIManager_Type
 import gtk.VBox as PyGtkVBox_Type
