@@ -1,5 +1,14 @@
 2005-05-30	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-mime-database.{c,h}: Don't use separate private data
+	  structure.
+	* exo/exo-mime-info.{c,h}: Add exo_mime_info_get_media(),
+	  exo_mime_info_get_subtype() and exo_mime_info_lookup_icon() methods.
+	* python/exo.defs, python/exo.override: Add new methods to the Python
+	  bindings.
+
+2005-05-30	Benedikt Meurer <benny@xfce.org>
+
 	* exo/Makefile.am: We don't use D-Bus any longer, so no need to keep
 	  that define around.
 
